<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E6B7"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#D6F1F4"
        android:hint="@string/grade_calculater"
        android:text="@string/gradecalculater"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:autofillHints=""
        android:background="#E7BFED"
        android:ems="10"
        android:hint="@string/quizes15"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/hw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:autofillHints=""
        android:background="#E4ADED"
        android:ems="10"
        android:hint="@string/homework25"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/midterms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:background="#E3B3EC"
        android:ems="10"
        android:hint="@string/midterms_30"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/final1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:autofillHints=""
        android:background="#EAB8F3"
        android:ems="10"
        android:hint="@string/final30"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:background="#CBEDA2"
        android:hint="@string/calculate"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:hint="@string/reset"
        android:onClick="reset"
        android:textSize="36sp"

        />

    <TextView
        android:id="@+id/yourgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="620dp"
        android:hint="@string/yourgrade"
        android:text="@string/your_grade"
        android:textSize="36sp"

        />

</RelativeLayout>